# pretix-seatingplan

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  apps.py  pretixplugin.toml  pyproject.toml  seatingView.py  setup.cfg  urls.py
.github/workflows/: style.yml  tests.yml
pretix_seatingplan/: apps.py  seatingView.py  signals.py  urls.py  views.py
pretix_seatingplan/locale/de/LC_MESSAGES/: django.po
pretix_seatingplan/static/pretix_seatingplan/control/: display_seats.js
pretix_seatingplan/static/pretix_seatingplan/presale/: display_seats.js
pretix_seatingplan/templates/pretix_seatingplan/: display.html  index.html  seatingplan.html
